# earthdawn-dice-roll-chat

./: .gitignore  Cargo.toml  README.md
performance_test/: loadtest_artillery.yaml  package-lock.json
src/: dice.rs  greet.rs  main.rs  messages.rs  room.rs  server.rs
static/: application.html  websocket.html
static/css/: application.css
static/js/: application.js
