[package]
name = "earthdawn-dice-roll-chat"
version = "0.7.0"
edition = "2018"

[[bin]]
name = "earthdawn-dice-roll-chat"
path = "src/main.rs"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
log = "0.4"
serde = "1"
serde_json = "1"
git-version = "0.3.4"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
